<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <CheckBox
            android:id="@+id/cbCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <TextView
            android:id="@+id/tvTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/cbCompleted"
            android:layout_marginStart="8dp"
            android:text="@string/task_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:ellipsize="end"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tvTaskDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTaskTitle"
            android:layout_toEndOf="@id/cbCompleted"
            android:layout_marginTop="4dp"
            android:text="@string/due_date"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/vPriorityIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTaskDueDate"
            android:layout_toEndOf="@id/cbCompleted"
            android:layout_marginTop="4dp"
            android:text="@string/high_priority"
            android:textSize="14sp"
            android:padding="5dp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/time_left"
            android:textSize="14sp"
            android:visibility="gone"
            android:textStyle="italic" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>
